--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server --open"
+    "demo": "webpack && node dist/bundle.js"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "3.2.0",
